data/XU_test/negative/a3m_no_hhm/test_non_AMP_6.a3m
>test|non_AMP|6
EKKDEYLSKSSASAAPVIDTLAHGYGKVLGKGRLPEVPVIVKARFVSKLAEEKSESLVVLSN